--- a/main/style.css
+++ b/main/style.css
@@ -105,6 +105,7 @@ a {
 .second{
     background-color: #F5F7FA;
     display:flex;
+    justify-content: space-between;
 }
 .second .second_text{
     margin-top:40px;
@@ -137,10 +138,12 @@ a {
     margin-top:10px;
     font-size:20px;
 }
+.second .credit_img{
+    margin: 0px 80px 0 0;
+}
 .second img{
-    width:500px;
-    margin:-60px;
-    margin-left:150px;
+    width:400px;
+    margin:0px;
 }
 
 /* main > third */
@@ -298,16 +301,12 @@ a {
     }
 
     /* main > second */
-    .second{
-        position:relative;
-        flex-direction: column;
-    }
     .second .second_text{
         margin-left:20px;
     }
     .second .second_text .second_main1{
         font-size:20px;
-        width:400px
+        width:400px;
     }
     .second .second_text .second_main2{
         font-size:20px;
@@ -325,11 +324,12 @@ a {
         margin-left:13px;
         margin-top:5px;
     }
+    .second .credit_img{
+        margin-top: 20px;
+        padding-right:100px;
+    }
     .second img{
-        width:220px;
-        margin-top:0px;
-        margin-left: 338px;
-        position:absolute;
+        width:200px;
     }
 
     /* main > third */
