--- a/main/style.css
+++ b/main/style.css
@@ -138,12 +138,9 @@ a {
     margin-top:10px;
     font-size:20px;
 }
-.second .credit_img{
-    margin: 0px 80px 0 0;
-}
 .second img{
     width:400px;
-    margin:0px;
+    margin:0 80px 0 0;
 }
 
 /* main > third */
@@ -324,10 +321,7 @@ a {
         margin-left:13px;
         margin-top:5px;
     }
-    .second .credit_img{
-        margin-top: 20px;
-        padding-right:100px;
-    }
+
     .second img{
         width:200px;
     }
