--- a/Benefit/Benefit.css
+++ b/Benefit/Benefit.css
@@ -273,6 +273,9 @@ input::placeholder {
         align-items: flex-start;
         padding: 8px 24px;
     }
+    .navbar_logo img{
+        margin-left:0px;
+    }
     .navbar_menu{
         display: none;
         flex-direction: column;
@@ -295,36 +298,50 @@ input::placeholder {
     .navbar_menu.active, .navbar_login.active {
         display: flex;
     }
-    
+
     /*header */
-    .header .title{
-        margin-left:10px;
-        padding-top:10px;
+    .header_section{
+        margin-top:42px;
+    }
+    .hedaer p{
         font-size:30px;
     }
-    .header .search_form{
-        padding-top:25px;
+    .subheader{
+        font-size: 20px;
+        margin-top:10px;
     }
-    .header .search_education{
-        width:300px;
-        height:30px;
-        margin-left:20px;
+    .subheader_line .line{
+        width:150px;
+        margin-right:120px;
     }
-    .header .submit_education{
-        width:40px;
-        height:30px;
-        font-size:16px;
+    .search_section{
+        margin-top: 0px;
     }
-    .header .category_education{
-        width:70px;
-        height:30px;
-        font-size:16px;
+    .search_bar{
+        margin-right: 50px;
     }
-    .header img{
-        width:100px;
-        height:150px;
-        margin-left:15px;
+    .search_bar input{
+        width:210px;
+        height:40px;
     }
+    .searchBtn{
+        margin-left: 205px;
+    }
+    .searchBtn button{
+        padding:5px;
+        height:40px;
+    }
+    .header_img{
+        width: 120px;
+        height:120px;
+        margin-left:400px;
+    }
+    .header_img img{
+        width:120px;
+        height:120px;
+    }
+
+
     /*카테고리*/
     .category .optional #ed_target{
         width:80px;
@@ -340,22 +357,15 @@ input::placeholder {
     }
 
     /*페이지네이션 */
-    .page{
-        margin-top:25px;
-        margin-left:20px;
-        grid-template-columns: 1fr 1fr;
-        gap:10px 15px;
+    .page_section{
+        margin:20px 0 20px 0;
     }
-    .page .section{
-        width:250px;
-        height:300px;
+    .page_line1{
+        flex-direction:column;
+        align-items: center;
     }
-    .page .section .ed_name{
-        font-size:24px;
-    }
-    .page .section p{
-        margin-left:10px;
-        margin-top:10px;
-        font-size:14px;
+    .page_line2{
+        flex-direction: column;
+        align-items: center;
     }
 }
