--- a/Finall/static/css/Main.css
+++ b/Finall/static/css/Main.css
@@ -8,40 +8,44 @@
     font-family: 'GangwonState', sans-serif;
 }
 .display-container{
-    margin: 0;
-    width: 100%;
-    height: 100%;
+    margin: auto;
+    max-width: 1200px;   
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 100vh;
 }
 a {
     text-decoration: none;
-    color: #f0f4f5;
+    color: white;
 }
+/* navbar section */
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background-color: #033075;
     padding: 8px 12px;
 }
-.navbar_logo {
-    font-size: 20px;
-    color: #f0f4f5;
-}
-.navbar_logo i{
-    color: #d49466;/* 색상 설정하기 */
+.navbar_logo img {
+    width: 130px;
+    height: 25px;
+    margin-left: 20px;
 }
 .navbar_menu {
     display: flex;
     list-style: none;
     padding-left: 0;
     margin-bottom: 0;
+    margin-right: 90px;
 }
 .navbar_menu li {
     padding: 8px 12px;
 }
+.navbar a {
+    color: white;
+}
 .navbar_menu li:hover {
     background-color: #f0f4f5;
     border-radius: 4px;
+}
+.navbar_menu li:hover > a {
     color: #033075;
 }
 .navbar_login {
@@ -50,13 +54,16 @@ a {
     display: flex;
     padding-left: 0;
     margin-bottom: 0;
+    margin-right: 20px;
     font-size: 12px;
 }
-.navbar_login:hover {
+.navbar_login li:hover {
     background-color: #f0f4f5;
     border-radius: 4px;
-    color: #033075;
     padding: 8px 4px;
+}
+.navbar_login li:hover > a {
+    color: #033075;
 }
 .navbar_login i{
     padding-left: 5px;
@@ -66,7 +73,6 @@ a {
     position: absolute;
     right: 32px;
     font-size: 20px;
-    color: #d49466  ;
 }
 .navbar_toggleBtn:hover i:hover {
     color: #f0f4f5;
@@ -75,6 +81,7 @@ a {
 /* main */
 .main{
     white-space: nowrap; /*가로 폭이 줄어들었을 때 자동 줄바꿈이 일어나지 않도록함*/
+    margin-top: 56px; 
 }
 .main p{
     color:#4D4D4D;
@@ -84,26 +91,26 @@ a {
     display:flex;
     justify-content: space-around;
     margin-top:20px;
-    text-align: center;
+    align-items: center;
 }
 .first p{
     margin-top:20px;
-    font-size:25.06px;
+    font-size:25px;
 }
 .first img{
-    margin-top:44px;
-    width:100px;
+    width:80px;
     height:25px;
 }
 /* main > second */
 .second{
     background-color: #F5F7FA;
     display:flex;
+    justify-content: space-between;
 }
 .second .second_text{
     margin-top:40px;
     margin-bottom:20px;
-    margin-left:200px;
+    margin-left:60px;
 }
 .second .second_main1{
     font-size:50px;
@@ -132,9 +139,8 @@ a {
     font-size:20px;
 }
 .second img{
-    width:600px;
-    margin:-60px;
-    margin-left:150px;
+    width:400px;
+    margin:0 80px 0 0;
 }
 
 /* main > third */
@@ -144,10 +150,10 @@ a {
     margin-bottom:10px;
 }
 .third img{
-    margin-left:200px;
+    margin-left:60px;
 }
 .third .third_text{
-    margin-left:200px;
+    margin-left:145px;
     margin-bottom:10px;
     padding-top:30px;
 }
@@ -157,6 +163,7 @@ a {
 .third .third_text .third_sub{
     font-size:18px;
     color:#717171;
+    margin-left: 8px;
 }
 .third .third_text .benefit{
     background-color:#033075;
@@ -167,7 +174,7 @@ a {
 }
 .third .third_text .benefit .benefit_button{
     position:absolute;
-    margin-left:20px;
+    margin-left: 20px;
     margin-top:10px;
     font-size:20px;
 }
@@ -177,20 +184,22 @@ a {
     background-color:#F5F7FA;
     display:flex;
     padding-top:10px;
-    padding-bottom:20px;
+    margin-bottom:10px;
 }
 .fourth img{
-    margin-left:200px;
+    margin-left: 60px;
 }
 .fourth .fourth_text{
+    margin-left:100px;
+    margin-bottom:10px;
     padding-top:30px;
-    margin-left:155px;
 }
 .fourth .fourth_text .fourth_main{
     font-size:50px;
 }
 .fourth .fourth_text .fourth_sub{
     font-size:18px;
+    margin-left: 8px;
     color:#717171;
 }
 .fourth .education{
@@ -209,19 +218,23 @@ a {
 /* main > fifth */
 .fifth{
     display:flex;
+    padding-top:10px;
+    margin-bottom:10px;
 }
 .fifth img{
-    margin-left:200px;
+    margin-left: 90px;
 }
 .fifth .fifth_text{
-    margin-left:155px;
-    margin-top:20px;
+    margin-left:140px;
+    margin-bottom:10px;
+    padding-top:30px;
 }
 .fifth .fifth_main{
     font-size:50px;
 }
 .fifth .fifth_sub{
     font-size:18px;
+    margin-left: 8px;
     color:#717171;
 }
 .fifth .fifth_text .professor{
@@ -243,6 +256,9 @@ a {
         flex-direction: column;
         align-items: flex-start;
         padding: 8px 24px;
+    }
+    .navbar_logo img{
+        margin-left:0px;
     }
     .navbar_menu{
         display: none;
@@ -269,6 +285,7 @@ a {
     /* main */
     .main{
         white-space: initial;
+        margin-top:0px;
     }
 
     /*main > first */
@@ -277,20 +294,16 @@ a {
     }
     .first img{
         width:50px;
-        margin-top:32px;
+        margin-top:2px;
     }
 
     /* main > second */
-    .second{
-        position:relative;
-        flex-direction: column;
-    }
     .second .second_text{
         margin-left:20px;
     }
     .second .second_text .second_main1{
         font-size:20px;
-        width:400px
+        width:400px;
     }
     .second .second_text .second_main2{
         font-size:20px;
@@ -308,11 +321,9 @@ a {
         margin-left:13px;
         margin-top:5px;
     }
+
     .second img{
-        width:220px;
-        margin-top:0px;
-        margin-left: 338px;
-        position:absolute;
+        width:200px;
     }
 
     /* main > third */
@@ -328,7 +339,7 @@ a {
         font-size:20px;
     }
     .third .third_text .third_sub{
-        font-size:14px;
+        font-size:12px;
     }
     .third .third_text .benefit{
         width:100px;
@@ -353,7 +364,7 @@ a {
         font-size:20px;
     }
     .fourth .fourth_text .fourth_sub{
-        font-size:14px;
+        font-size:12px;
     }
     .fourth .education{
         width:100px;
@@ -366,10 +377,9 @@ a {
     }
     /* main > fifth*/
     .fifth img{
-        margin-left:0px;
+        margin-left:20px;
         width:180px;
         height:180px;
-        margin-right: 20px;
     }
     .fifth .fifth_text{
         margin-left:20px;
@@ -378,7 +388,7 @@ a {
         font-size:20px;
     }
     .fifth .fifth_sub{
-        font-size:14px;
+        font-size:12px;
     }
     .fifth .fifth_text .professor{
         width:100px;
