--- a/Finall/static/css/Signup.css
+++ b/Finall/static/css/Signup.css
@@ -1,65 +1,70 @@
+/* basic option */
 body {
-    background-color: #033075 !important;
+    background-color: #033075;
 }
-.display-container {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-}
-.headerpart {
-    position: relative;
-}
-.login_header {
-    display: flex;
-    position: absolute;
-    color: white;
-    font-size: 80px;
-    font-weight: 550;
-    margin-top: 250px;
-    margin-left: 200px;
+.display-container{
+    max-width: 1200px;   
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.SignUpBtn {
+/* header section */
+.headerpart {
     display: flex;
-    flex-direction: column;
-    margin-left: 220px;
-    width: 240px !important;
-    height: 50px !important;
 }
-.SignUpBtn button {
-    padding: 10px 10px 10px 10px;
-    background-color: #033075;
+.login_header {
     color: white;
-    border: white solid 2px;
+    font-size: 100px;
+    font-weight: 550;
+    margin-top: 180px;
+}
+.login_subheader {
+    color: white;
+    font-size: 15px;
+    margin-left: 20px;
+}
+/* Btn section */
+.Btn_section {
+    margin-left: 20px;
+}
+.Btn_section button {
+    width: 260px;
+    height: 50px;
+    background-color: inherit;
+    border: 2px solid white;
+    margin-bottom: 15px;
+    color: white;
     font-size: 18px;
     font-weight: 600;
-    margin-top: 450px;
+    text-align: start;
+    padding: 0 20px;
 }
-button:hover {
-    color: #033075;
+.SUBtn:hover {
     background-color: white;
+    color: #033075;
+    font-weight: 600;
+}
+.NMBtn:hover {
+    background-color: white;
+    color: #033075;
+    font-weight: 600;
 }
 
 /* tool-part */
+.login_tool {
+    width: 350px;
+    margin-left: 350px;
+    margin-top: 100px;
+}
 .login_border {
     border: 5px solid transparent;
     background-image: linear-gradient(#032964, #032964), linear-gradient(to right, #fbfcb9be, #ffcdf3aa, #65d3ffaa);
     background-origin: border-box;
     background-clip: content-box, border-box;
-    width: 350px !important;
+    width: 350px;
     height: 550px;
     border-radius: 15px;
-    box-shadow: -5px 5px 7px ;
-}
-.login_tool {
-    display: flex;
-    justify-content: center;
-    margin-left: 1000px;
-}
-.login_border {
-    position: absolute;
-    width: 800px;
-    top: 150px;
+    box-shadow: -5px 5px 7px 
 }
 .tool_header p {
     font-size: 30px;
@@ -84,7 +89,7 @@ input::placeholder {
     background-color: transparent;
     border: 1px solid white;
     padding: 4px 10px;
-    width: 290px;
+    width: 280px;
     height: 40px;
     border-radius: 8px;
     color: white;
@@ -96,7 +101,7 @@ input::placeholder {
     background-color: transparent;
     border: 1px solid white;
     padding: 4px 10px;
-    width: 290px;
+    width: 280px;
     height: 40px;
     border-radius: 8px;
     color: white;
@@ -108,7 +113,7 @@ input::placeholder {
     background-color: transparent;
     border: 1px solid white;
     padding: 4px 10px;
-    width: 290px;
+    width: 280px;
     height: 40px;
     border-radius: 8px;
     color: white;
@@ -120,7 +125,7 @@ input::placeholder {
     background-color: transparent;
     border: 1px solid white;
     padding: 4px 10px;
-    width: 290px;
+    width: 280px;
     height: 40px;
     border-radius: 8px;
     color: white;
@@ -137,7 +142,7 @@ input::placeholder {
     border-radius: 10px !important;
     border: none;
     font-size: 17px;
-    width: 290px;
+    width: 280px;
     color: white;
     filter: drop-shadow(2px 2px 3px #000000);
 }
@@ -179,4 +184,71 @@ input::placeholder {
 }
 .tool_icon div {
     margin: 0 5px 0 5px;
+}
+
+.signBtn{
+    display:none;
+}
+.tool_logo {
+    display: none;
+}
+
+@media screen and (max-width: 576px) {
+    .header_section{
+        display: none;
+    }
+    /* tool-part */
+    .login_tool{
+        display: grid;
+        top:105px;
+        margin-left: 0;
+    }
+    /* tool-part */
+    .tool_logo {
+        display: block;
+    }
+    .tool_logo img {
+        width: 250px;
+        margin: 20px 0 0 20px;
+    }
+    .tool_header p{
+        margin-top: 15px;
+    }
+    .tool_checkbox span{
+        font-size:12px;
+    }
+    .tool_loginBtn{
+        margin-top:10px;
+    }
+
+    /* display none >> login_subheader */
+    .login_subheader{
+        display:none;
+    }
+
+    /* display none >> signup btn */
+    .SignUpBtn{
+        display:none;
+    }
+    .notmemberBtn{
+        display:none;
+    }
+
+    
+    /*new sign*/
+    .signBtn{
+        display:flex;
+        justify-content: space-around;
+        margin-top: 15px;
+    }
+    .signBtn p a{
+        text-decoration: none;
+        font-size:14px;
+        color:white;
+    }
+    .signBtn p a:active{
+        text-shadow: 2px 2px 0 rgba(255, 255, 255, 0.5);
+        
+    }
+
 }
