--- a/Finall/education/templates/education/Education.html
+++ b/Finall/education/templates/education/Education.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css&bootstrap 연결 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/Benefit.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Education.css' %}">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
-    <script src="{% static 'js/Benefit.js' %}" defer></script>
+    <script src="{% static 'js/Education.js' %}" defer></script>
     <script>
         function redirectToView() {
             const selectElement = document.getElementById("ed_target");
@@ -18,7 +18,7 @@
             }
         }
     </script>
-    <title>혜택 선택 - FINALL</title>
+    <title>교육 선택 - FINALL</title>
 </head>
 <body class="gangwon-font">
     <div class="display-container">
@@ -40,15 +40,15 @@
         <!--header-->
         <div class="header_section">
             <div class="header">
-                <p>맞춤혜택</p>
+                <p>맞춤교육</p>
                 <div class="header_line"></div>
             </div>
             <div class="subheader d-flex justify-content-center">
-                <p class="blue">내 상황에 맞는 혜택</p><p>이 궁금하다면?</p>
+                <p class="blue">내 상황에 맞는 교육</p><p>이 궁금하다면?</p>
             </div>
             <div class="subheader_line"><div class="line"></div></div>
             <div class="search_section">
-                <form class="form-inline" action="{% url 'search_service' %}" method="get">
+                <form class="form-inline" action="{% url 'education_search' %}" method="get"></form>
                     <div class="search_bar">
                         <input type="text" placeholder="키워드를 입력해주세요." name="search" value="{{search}}">
                     </div>
@@ -56,8 +56,8 @@
                         <button class="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                     </div>
                 </form>
-                <div class="header_img">
-                    <img src="../img/bene_finance.png" alt="">
+                <div class="consult_img">
+                    <img src="../img/ed_education.png" alt="">
                 </div>
             </div>
         </div>
@@ -66,15 +66,14 @@
             <section class="optional">
                 <select id="ed_target" onchange="redirectToView()">
                     <option>서비스 분류</option>
-                    <option value="../search_service/?search=청소년">청소년</option>
-                    <option value="../search_service/?search=대학생">대학생</option>
-                    <option value="../search_service/?search=중장년">중장년</option>
-                    <option value="../search_service/?search=시니어">시니어</option>
-                    <option value="../search_service/?search=장애인">장애인</option>
-                    <option value="../search_service/?search=북한이탈주민">북한이탈주민</option>
+                    <option value="../education_search/?search=청소년">청소년</option>
+                    <option value="../education_search/?search=대학생">대학생</option>
+                    <option value="../education_search/?search=중장년">중장년</option>
+                    <option value="../education_search/?search=시니어">시니어</option>
+                    <option value="../education_search/?search=장애인">장애인</option>
+                    <option value="../education_search/?search=북한이탈주민">북한이탈주민</option>
                 </select>
             </section>
-
             <section class="optional">
                 <select id="ed_field">
                     <option>전체</option>
@@ -92,16 +91,14 @@
             <div class="page_line1">
                 {% for data in datas %}
                 <div class="page_box">
-                    <a href={{data.상세조회URL}}>
+                    <a href="#">
+                        <div class="box_video">
+                            <video src=""></video>
+                        </div>
                         <div class="box_content">
-                            <div class="smallbox">{{data.서비스분야}}</div>
-                            <p class="ed_name">{{data.서비스분야}}</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                            <p>{{data.서비스목적요약}}</p>
-                            <ul>
-                                <li>신청 기간: {{data.신청기한}}</li>
-                                <li>접수 기관: {{data.접수기관}}</li>
-                                <li>지원 형태: {{data.지원유형}}</li>
-                            </ul>
+                            <p class="ed_name">교육명:{{data.edcSbjcNm}}</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>교육 소개: {{data.edcSbjcIntrc}}</p>
+                            <p>교육 시간: 6분</p>
                         </div>
                     </a>   
                 </div>
@@ -119,9 +116,7 @@
                 <a class="cramps" href="?page={{paginator.num_pages}}"> >> </a>
               </div>
         </div>
-        </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
