--- a/Finall/education/templates/education/Education.html
+++ b/Finall/education/templates/education/Education.html
@@ -29,8 +29,8 @@
             </div>
             <ul class="navbar_menu">
                 <li><a href="{% url 'education' %}">맞춤교육</a></li>
-                <li><a href="{% url 'service' %}">맞춤혜택</a></li>
-                <li><a href="{% url 'consult' %}">맞춤상담</a></li>
+                <li><a href="{% url 'benefit' %}">맞춤혜택</a></li>
+                <li><a href="{% url 'post_list' %}">맞춤상담</a></li>
             </ul>
             <ul class="navbar_login">
                 <li><a href="{% url 'login' %}">로그인<i class="fa-regular fa-user"></i></a></li>
