--- a/Finall/education_api/templates/education_api/Education.html
+++ b/Finall/education_api/templates/education_api/Education.html
@@ -19,9 +19,9 @@
                 <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
             </div>
             <ul class="navbar_menu">
-                <li><a href="{% url 'education_search : api_education_search' %}">맞춤교육</a></li>
-                <li><a href="{% url 'service:api_service_search' %}">맞춤혜택</a></li>
-                <li><a href="../Consult/Consult.html">맞춤상담</a></li>
+                <li><a href="{% url 'education' %}">맞춤교육</a></li>
+                <li><a href="{% url 'benefit' %}">맞춤혜택</a></li>
+                <li><a href="{% url 'post_list' %}">맞춤상담</a></li>
             </ul>
             <ul class="navbar_login">
                 <li><a href="#">로그인<i class="fa-regular fa-user"></i></a></li>
