--- a/Finall/education/templates/main/index.html
+++ b/Finall/education/templates/main/index.html
@@ -18,9 +18,9 @@
             <a href="./index.html">가제목</a><!-- 서비스 이름 -->
         </div>
         <ul class="navbar_menu">
-            <li><a href="./index.html">메인화면</a></li>
-            <li><a href="{% url "education_api:api_education_search" %}">맞춤교육</a></li>
-            <li><a href="{% url "service:api_service_search" %}">맞춤혜택</a></li>
+            <li><a href="{% url 'education' %}">맞춤교육</a></li>
+            <li><a href="{% url 'benefit' %}">맞춤혜택</a></li>
+            <li><a href="{% url 'post_list' %}">맞춤상담</a></li>
         </ul>
         <ul class="navbar_login">
             <li><a href="">로그인<i class="fa-regular fa-user"></i></a></li>
